if(TLRENDER_GLFW)
    add_subdirectory(player)
    add_subdirectory(render)
    add_subdirectory(test-patterns)
    add_subdirectory(widgets)
endif()
if(TLRENDER_QT6 OR TLRENDER_QT5 AND NOT "${TLRENDER_API}" STREQUAL "GLES_2")
    add_subdirectory(panorama-qtwidget)
    add_subdirectory(player-qtquick)
    add_subdirectory(player-qtwidget)
    add_subdirectory(widgets-qtwidget)
endif()
