add_subdirectory(tlBaseApp)
add_subdirectory(tlCore)
add_subdirectory(tlGL)
add_subdirectory(tlIO)        # needs tlGL for USD
add_subdirectory(tlTimeline)
if(TLRENDER_GLFW)
    add_subdirectory(tlTimelineGL)
endif()
if(TLRENDER_VK)
    add_subdirectory(tlVk)
    add_subdirectory(tlTimelineVk)
endif()
add_subdirectory(tlDevice)    # needs tlTimelineGL for rendering
add_subdirectory(tlUI)
add_subdirectory(tlTimelineUI)
