add_subdirectory(tlBaseApp)
add_subdirectory(tlCore)
add_subdirectory(tlGL)
add_subdirectory(tlIO)        # needs tlGL for USD
add_subdirectory(tlTimeline)
add_subdirectory(tlDraw)
if(TLRENDER_GLFW)
    add_subdirectory(tlTimelineGL)
endif()
if(TLRENDER_VK)
    add_subdirectory(tlVk)
    add_subdirectory(tlTimelineVk)
endif()
add_subdirectory(tlDevice)    # needs tlTimelineGL or tlTimelineVk for rendering
add_subdirectory(tlUI)
if(TLRENDER_GLFW)
    add_subdirectory(tlTimelineUI)
endif()
if(TLRENDER_VK)
    add_subdirectory(tlTimelineUIVk)
endif()
