add_subdirectory(tlCore)
if(NOT MRV2_BACKEND STREQUAL "VK")
    add_subdirectory(tlGL)
endif()
add_subdirectory(tlIO)        # needs tlGL for USD
add_subdirectory(tlTimeline)
add_subdirectory(tlDraw)
if(TLRENDER_GLFW)
    if(NOT MRV2_BACKEND STREQUAL "VK")
	add_subdirectory(tlTimelineGL)
    endif()
endif()
if(TLRENDER_VK)
    add_subdirectory(tlVk)
    add_subdirectory(tlTimelineVk)
endif()
add_subdirectory(tlDevice)    # needs tlTimelineGL or tlTimelineVk for rendering
add_subdirectory(tlUI)
add_subdirectory(tlTimelineUI)
