add_subdirectory(tlAppTest)
add_subdirectory(tlCoreTest)
add_subdirectory(tlGLTest)
add_subdirectory(tlIOTest)
add_subdirectory(tlTestLib)
add_subdirectory(tlTimelineTest)
add_subdirectory(tltest)
if(TLRENDER_QT6 OR TLRENDER_QT5 AND NOT "${TLRENDER_API}" STREQUAL "GLES_2")
    add_subdirectory(tlQtTest)
endif()
